[tool.poetry]
name = "randomcatbot"
version = "0.1.0"
description = "Post random cat images on facebook"
authors = ["seokkuuu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
facebook-sdk = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
