[tool.poetry]
name = "catmomosbot5000"
version = "3.0.0"
description = "Post 'momos' with cat theme on Facebook"
authors = ["seokkuuu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
facebook-sdk = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
